Bug 1222097 - Resolve the openWindow URL using the service worker URL as the base URL. r=bkelly, a=ritu